# working_with_database

./: .gitignore  README.md  pyproject.toml
scr/project_1/: models.py
scr/project_2/: database.py  logger.py  main.py  models.py  orm.py  parser.py  spimex_pdf_parser.py
