[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy==2.0.43",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "xlrd==2.0.1",
    "aiohttp==3.11.16",
    "asyncio==3.4.3",
    "asyncpg==0.30.0"
]
