[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy==2.0.43",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "xlrd==2.0.1",
    "aiohttp==3.11.16",
    "openpyxl>=3.1.5",
    "sqlalchemy-utils==0.41.2",
    "selenium==4.29.0",
    "webdriver-manager>=4.0.2",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
    "pdfplumber>=0.11.9",
    "ruff>=0.15.10",
]

[tool.ruff]
# Эквивалент max-line-length из flake8
line-length = 120

# Исключения (аналог exclude из flake8)
exclude = [
    ".git",
    ".gitignore",
    "__pycache__",
    "*.py[co]",
    "venv",
    ".pytest_cache",
    ".env",
    "conftest.py"
]

# Настройки форматирования (аналог black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Настройки линтинга
[tool.ruff.lint]
extend-select = [
    "E", "W", "F",  # pycodestyle, pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "C4",           # flake8-comprehensions
    "SIM",          # flake8-simplify
    "PT",           # flake8-pytest-style
    "RUF",          # специфичные правила ruff
]

# Игнорируем те же коды, что и в extend-ignore flake8
ignore = [
    "PT006",   # неправильное имя в parametrize
    "PT011",   # неправильное исключение в pytest.raises
    "F405",    # name may be undefined (обычно для __all__)
]
